Project work at WIFI - Day 4 - Design

--- a/app/src/main/res/layout/activity_calendar_edit.xml
+++ b/app/src/main/res/layout/activity_calendar_edit.xml
@@ -21,10 +21,10 @@
         android:id="@+id/button15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onClose"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
-        android:text="@string/str_back"
+        android:onClick="onClose"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
