--- a/app/src/main/res/layout/activity_qr_code_list_edit.xml
+++ b/app/src/main/res/layout/activity_qr_code_list_edit.xml
@@ -71,6 +71,7 @@
         android:id="@+id/rvQrItems"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/floatingActionButton5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
         tools:itemCount="5"
         tools:listitem="@layout/view_qr_edit_item" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <Button
         android:id="@+id/floatingActionButton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -89,7 +90,7 @@
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add_black_48dp" />
+        android:text="@string/string_add"/>
 
     <Button
         android:id="@+id/button12"
