--- a/app/src/main/res/layout/view_qr_edit_item.xml
+++ b/app/src/main/res/layout/view_qr_edit_item.xml
@@ -17,45 +17,28 @@
 
     <TextView
         android:id="@+id/tvTitel"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/textView18"
-        app:layout_constraintEnd_toStartOf="@+id/textView18"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
-        app:layout_constraintTop_toTopOf="@+id/textView18"
-        tools:text="@string/title" />
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/quantity"
-        app:layout_constraintBottom_toBottomOf="@+id/tvQuantity"
+        android:layout_marginEnd="16dp"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintBottom_toBottomOf="@+id/ivDelete"
         app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tvTitel"
-        app:layout_constraintTop_toTopOf="@+id/tvQuantity" />
+        app:layout_constraintStart_toStartOf="@+id/tvContent"
+        app:layout_constraintTop_toTopOf="@+id/ivDelete"
+        tools:text="@string/title" />
 
     <TextView
         android:id="@+id/tvQuantity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/ivDelete"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTitel"
         app:layout_constraintEnd_toStartOf="@+id/ivDelete"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toTopOf="@+id/ivDelete"
+        app:layout_constraintStart_toEndOf="@+id/tvTitel"
+        app:layout_constraintTop_toTopOf="@+id/tvTitel"
         tools:text="Quantity" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/content"
-        app:layout_constraintStart_toStartOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
         android:id="@+id/tvContent"
@@ -64,23 +47,14 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:lines="1"
+        android:layout_marginTop="16dp"
+        android:inputType="textMultiLine"
         android:maxLines="4"
         android:minLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView21"
-        app:layout_constraintTop_toTopOf="@+id/textView21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitel"
         tools:text="@string/tv_content" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title"
-        app:layout_constraintBottom_toBottomOf="@+id/tvTitel"
-        app:layout_constraintEnd_toStartOf="@+id/tvTitel"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvTitel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
