--- a/app/src/main/res/layout/activity_calendar_add.xml
+++ b/app/src/main/res/layout/activity_calendar_add.xml
@@ -38,7 +38,7 @@
         android:onClick="onClose"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
-        android:text="@string/str_back"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
