--- a/app/src/main/res/layout/fragment_calendar_main.xml
+++ b/app/src/main/res/layout/fragment_calendar_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".calendar.CalendarMainFragment">
+    tools:context=".calendar.CalendarMainFragment"
+    android:background="@drawable/border">
 
     <TextView
         android:id="@+id/tvWeekNumber"
