--- a/app/src/main/res/layout/fragment_todo_list_main.xml
+++ b/app/src/main/res/layout/fragment_todo_list_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".todolist.TodoListMainFragment">
+    tools:context=".todolist.TodoListMainFragment"
+    android:background="@drawable/border">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTodoList"
