--- a/app/src/main/res/layout/popup_template_add_shopping.xml
+++ b/app/src/main/res/layout/popup_template_add_shopping.xml
@@ -11,22 +11,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:textSize="@dimen/text_size"
         android:text="@string/quantity"
-        app:layout_constraintBottom_toBottomOf="@+id/tvAnzahlTemplate"
-        app:layout_constraintEnd_toStartOf="@+id/tvAnzahlTemplate"
+        app:layout_constraintBottom_toBottomOf="@+id/etAnzahl"
+        app:layout_constraintEnd_toStartOf="@+id/etAnzahl"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvAnzahlTemplate" />
+        app:layout_constraintTop_toTopOf="@+id/etAnzahl" />
 
     <EditText
-        android:id="@+id/tvAnzahlTemplate"
+        android:id="@+id/etAnzahl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:inputType="number"
+        android:textSize="@dimen/text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvAnzahl"
@@ -41,7 +43,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="29dp"
         android:spinnerMode="dialog"
-        app:layout_constraintEnd_toEndOf="@+id/tvAnzahlTemplate"
+        app:layout_constraintEnd_toEndOf="@+id/etAnzahl"
         app:layout_constraintStart_toStartOf="@+id/tvAnzahl"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
