more visual updates - Part 3 & Calendar update & update from hints

--- a/app/src/main/res/layout/activity_custom_shopping_list.xml
+++ b/app/src/main/res/layout/activity_custom_shopping_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onSaveAndAdd"
-        android:text="@string/string_template"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/btnHinzufuegen"
         app:layout_constraintHorizontal_bias="0.5"
@@ -57,8 +57,8 @@
         android:ems="10"
         android:hint="@string/tv_content"
         android:inputType="textMultiLine"
-        android:lines="3"
-        android:minLines="3"
+        android:minLines="1"
+        android:maxLines="4"
         app:layout_constraintBottom_toTopOf="@+id/btnVorlage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
