--- a/app/src/main/res/layout/activity_custom_todo_list.xml
+++ b/app/src/main/res/layout/activity_custom_todo_list.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:onClick="onSaveAndAddTodo"
-        android:text="@string/string_template"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
         app:layout_constraintEnd_toStartOf="@+id/button5"
         app:layout_constraintHorizontal_bias="0.5"
@@ -54,7 +54,7 @@
         android:hint="@string/content"
         android:inputType="textMultiLine|textPersonName"
         android:maxLines="4"
-        android:minLines="3"
+        android:minLines="1"
         android:singleLine="false"
         android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/button5"
