--- a/app/src/main/res/layout/view_qr_edit_item.xml
+++ b/app/src/main/res/layout/view_qr_edit_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/custom_ripple">
 
     <ImageView
         android:id="@+id/ivDelete"
@@ -33,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="@+id/tvTitel"
         app:layout_constraintEnd_toStartOf="@+id/ivDelete"
         app:layout_constraintHorizontal_bias="0.5"
