--- a/app/src/main/res/layout/activity_calendar_edit.xml
+++ b/app/src/main/res/layout/activity_calendar_edit.xml
@@ -13,7 +13,7 @@
         android:onClick="onEdit"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/edit"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
