--- a/app/src/main/res/layout/view_todolist_item.xml
+++ b/app/src/main/res/layout/view_todolist_item.xml
@@ -25,11 +25,10 @@
         android:id="@+id/tvTitleToDo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:textAlignment="center"
         android:textSize="@dimen/text_size"
+        android:gravity="center|left"
         app:layout_constraintBottom_toBottomOf="@+id/llActions"
         app:layout_constraintEnd_toStartOf="@+id/llActions"
         app:layout_constraintHorizontal_bias="0.5"
