user unterteilung - unter der standard datenbank steht jetzt der user und danach seine Einträge. Main-Methode hat nun getStandardUser-Methode. Einbauen in den Klassen noch nötig.

--- a/app/src/main/res/layout/popup_calendar_events.xml
+++ b/app/src/main/res/layout/popup_calendar_events.xml
@@ -17,4 +17,20 @@
         tools:itemCount="4"
         tools:listitem="@layout/view_calendar_list_item" />
 
+<!-- TODO: MAYBE "KEIN EINTRAG VORHANDEN"
+ <TextView-->
+<!--        android:id="@+id/tvNoEvents"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="@string/cal_no_entry"-->
+<!--        android:textSize="@dimen/text_size"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/rvCal" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
